--- a/Crowdsource/index.html
+++ b/Crowdsource/index.html
@@ -224,7 +224,7 @@
 		<div>
 			<article class="">
 				<h1>List of upcoming Events</h1>
-				<a href="/event.html" class="button large scrolly"> Upcoming Events</a>
+				<a href="event.html" class="button large scrolly"> Upcoming Events</a>
 			</article>
 
 		</div>
