--- a/Crowdsource/index.html
+++ b/Crowdsource/index.html
@@ -272,7 +272,7 @@
 									class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/crowdsourcebygoogleofficial"
 								class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#https://www.linkedin.com/company/google-crowdsource/"
+						<li><a href="https://www.linkedin.com/company/82153834/"
 								class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 
 						<!--
