--- a/Crowdsource/index.html
+++ b/Crowdsource/index.html
@@ -13,16 +13,30 @@
 <body class="is-preload">
 
 	<!-- Nav -->
-	<nav id="nav">
-		<ul class="container">
-			<li class="hui"><img class="huii" src="images/logo.svg" alt="" width="210" /></li>
-			<li><a href="#top">HOME</a></li>
-			<li><a href="#work">ABOUT US</a></li>
-			<li><a href="#portfolio">TEAM</a></li>
-			<li><a href="event.html">EVENTS</a></li>
-			<li><a href="#contact">CONTACT US</a></li>
-		</ul>
-	</nav>
+	<header>
+		<nav class="navbar">
+		  <div class="logo">
+			<img class="huii" src="images/logo.svg" alt="" width="210" />
+		  </div>
+		  <div class="sitenavigation">
+			<span class="menu-icon">
+		<a href="#" class="menu example5"><span></span></a>
+			<div id="hamburger">
+			  <span></span>
+			  <span></span>
+			  <span></span>
+			</div>
+			</span>
+			<ul>
+				<li><a href="#top">HOME</a></li>
+				<li><a href="#work">ABOUT US</a></li>
+				<li><a href="#portfolio">TEAM</a></li>
+				<li><a href="event.html">EVENTS</a></li>
+				<li><a href="#contact">CONTACT US</a></li>
+			</ul>
+		  </div>
+		</nav>
+	  </header>
 
 
 	<!-- Home -->
