--- a/Crowdsource/event.html
+++ b/Crowdsource/event.html
@@ -9,16 +9,30 @@
 </head>
 <body>
     <!-- Nav -->
-	<nav id="nav">
-		<ul class="container">
-			<li class="hui"><img class="huii" src="images/logo.svg" alt="" width="210" /></li>
-			<li><a href="index.html">HOME</a></li>
-			<li><a href="index.html">ABOUT US</a></li>
-            <li><a href="index.html">TEAM</a></li>
-			<li><a href="#">EVENTS</a></li>
-			<li><a href="index.html">CONTACT US</a></li>
-		</ul>
-	</nav>
+	<header>
+		<nav class="navbar">
+		  <div class="logo">
+			<img class="huii" src="images/logo.svg" alt="" width="210" />
+		  </div>
+		  <div class="sitenavigation">
+			<span class="menu-icon">
+		<a href="#" class="menu example5"><span></span></a>
+			<div id="hamburger">
+			  <span></span>
+			  <span></span>
+			  <span></span>
+			</div>
+			</span>
+			<ul>
+				<li><a href="#top">HOME</a></li>
+				<li><a href="#work">ABOUT US</a></li>
+				<li><a href="#portfolio">TEAM</a></li>
+				<li><a href="event.html">EVENTS</a></li>
+				<li><a href="#contact">CONTACT US</a></li>
+			</ul>
+		  </div>
+		</nav>
+	  </header>
     <div class="under-con">
         <img class="under-con" src="images/under-construction.gif" alt="">
     </div>
