--- a/Crowdsource/event.html
+++ b/Crowdsource/event.html
@@ -24,11 +24,11 @@
 			</div>
 			</span>
 			<ul>
-				<li><a href="#top">HOME</a></li>
-				<li><a href="#work">ABOUT US</a></li>
-				<li><a href="#portfolio">TEAM</a></li>
-				<li><a href="event.html">EVENTS</a></li>
-				<li><a href="#contact">CONTACT US</a></li>
+				<li><a href="index.html">HOME</a></li>
+				<li><a href="index.html">ABOUT US</a></li>
+				<li><a href="index.html">TEAM</a></li>
+				<li><a href="#">EVENTS</a></li>
+				<li><a href="index.html">CONTACT US</a></li>
 			</ul>
 		  </div>
 		</nav>
@@ -36,5 +36,13 @@
     <div class="under-con">
         <img class="under-con" src="images/under-construction.gif" alt="">
     </div>
+	
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
