--- a/Crowdsource/index.html
+++ b/Crowdsource/index.html
@@ -13,30 +13,16 @@
 <body class="is-preload">
 
 	<!-- Nav -->
-	<header>
-		<nav class="navbar">
-		  <div class="logo">
-			<img class="huii" src="images/logo.svg" alt="" width="210" />
-		  </div>
-		  <div class="sitenavigation">
-			<span class="menu-icon">
-		<a href="#" class="menu example5"><span></span></a>
-			<div id="hamburger">
-			  <span></span>
-			  <span></span>
-			  <span></span>
-			</div>
-			</span>
-			<ul>
-				<li><a href="#top">HOME</a></li>
-				<li><a href="#work">ABOUT US</a></li>
-				<li><a href="#portfolio">TEAM</a></li>
-				<li><a href="event.html">EVENTS</a></li>
-				<li><a href="#contact">CONTACT US</a></li>
-			</ul>
-		  </div>
-		</nav>
-	  </header>
+	<nav id="nav">
+		<ul class="container">
+			<li class="hui"><img class="huii" src="images/logo.svg" alt="" width="210" /></li>
+			<li><a href="#top">HOME</a></li>
+			<li><a href="#work">ABOUT US</a></li>
+			<li><a href="#portfolio">TEAM</a></li>
+			<li><a href="event.html">EVENTS</a></li>
+			<li><a href="#contact">CONTACT US</a></li>
+		</ul>
+	</nav>
 
 
 	<!-- Home -->
@@ -76,8 +62,8 @@
 						<h3>WHAT IS GOOGLE CROWDSOURCE?</h3>
 						<p>Ever imagined how Google knows about everything? How are its results so accurate? Actually,
 							every search that we make, everything that we do helps Google work better.
-							Crowdsource android and web app allow the user to answer questions in a gamified UI and help
-							generate training data for ML.
+							Crowdsource app allow the user to answer questions in a gamified UI and help
+							generate training data for Machine Learning.
 						</p>
 					</section>
 				</div>
@@ -108,7 +94,7 @@
 				<h2>ABOUT GOOGLE CROWDSOURCE @<blue>V</blue><red>I</red><yellow>T</yellow>
 					<blue>B</blue><green>H</green><red>O</red><yellow>P</yellow><blue>A</blue><green>L</green>
 				</h2>
-				<p>The core team at VIT Bhopal comprises of an eminent mentor and a devoted group of six students who
+				<p>The core team at VIT Bhopal comprises of an eminent mentor and a devoted group of seven students who
 					endeavour to grow as a community by learning and educating folks all across the globe in the field
 					of Google Crowdsource.
 					Our main motive is to spread the word about the crowdsource culture by organising various
@@ -137,8 +123,8 @@
 			</p>
 			<div class="mentor">
 				<article class="  box style2 ">
-					<a href="#" class="image featured"><img src="images/shishir.svg" alt="" /></a>
-					<h3 class="name"> <a href="">Dr. Shishir Kumar Shandilya</a>
+					<a href="#team" class="image featured"><img src="images/shishir.svg" alt="" /></a>
+					<h3 class="name"> <a href="#team">Dr. Shishir Kumar Shandilya</a>
 					</h3>
 					<p class="des">Deputy Director of SECURE .</p>
 					<!--<p class="hoii">
@@ -214,6 +200,7 @@
 							class="fa-solid fa-link"></i></a></h4>
 					</article>
 				</div>
+				
 
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
@@ -227,6 +214,18 @@
 
 					</article>
 				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a target="_blank" href="https://www.instagram.com/_x.aadill/" class="image featured"><img
+								src="images/adil.png" alt="" /></a>
+						<h3 class="name"><a target="_blank " href="https://www.linkedin.com/in/adil-ahmad-70a27a21b/">Adil Ahmad</a>
+						</h3>
+						<p class="des">Crowdsource VIT Bhopal</p>
+						<h4 class="linktree"><a href="https://linktr.ee/adilahmad07">Linktree<i
+									class="fa-solid fa-link"></i></a></h4>
+
+					</article>
+				</div>
 			</div>
 		</div>
 	<hr>
@@ -237,8 +236,8 @@
 	<article class="wrapper style4">
 		<div>
 			<article class="">
-				<h1>List of upcoming Events</h1>
-				<a href="event.html" class="button large scrolly"> Upcoming Events</a>
+				<h1>List of upcoming Events </h1>
+				<a href="event.html" class="button large scrolly "> Upcoming Events </a><img class="btngif" src="images/newbtn.gif" alt="new">
 			</article>
 
 		</div>
@@ -288,12 +287,10 @@
 								class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.linkedin.com/company/82153834/"
 								class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://www.instagram.com/crowdsource_vitbhopal/"
-									 class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 
 						<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
-								
+								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
 								<li><a href="#" class="icon brands fa-skype"><span>Skype</span></a></li>
 								<li><a href="#" class="icon brands fa-soundcloud"><span>Soundcloud</span></a></li>
@@ -318,6 +315,7 @@
 	</article>
 
 	<!-- Scripts -->
+	<script src="assets/js/event.js"></script>
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.scrolly.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
