--- a/Crowdsource/event.html
+++ b/Crowdsource/event.html
@@ -12,16 +12,31 @@
 
 <body>
 	<!-- Nav -->
-	<nav id="nav">
-		<ul class="container">
-			<li class="hui"><img class="huii" src="images/logo.svg" alt="" width="210" /></li>
+	<header>
+		<nav class="navbar">
+		  <div class="logo">
+			<img class="huii" src="images/logo.svg" alt="" width="210" />
+		  </div>
+		  <div class="sitenavigation">
+			<span class="menu-icon">
+		<a href="#" class="menu example5"><span></span></a>
+			<div id="hamburger">
+			  <span></span>
+			  <span></span>
+			  <span></span>
+			</div>
+			</span>
+			<ul>
+<li class="hui"><img class="huii" src="images/logo.svg" alt="" width="210" /></li>
 			<li><a href="index.html">HOME</a></li>
 			<li><a href="#event-page">EVENTS</a></li>
 			<li><a href="#about-speaker">ABOUT SPEAKER</a></li>
 			<li><a href="#more-event">UPCOMING</a></li>
 			<li><a href="#gallery">GALLERY</a></li>
-		</ul>
-	</nav>
+			</ul>
+		  </div>
+		</nav>
+	  </header>
 	<!-- <div class="under-con">
         <img class="under-con" src="images/under-construction.gif" alt="">
         
