--- a/Crowdsource/event.html
+++ b/Crowdsource/event.html
@@ -5,6 +5,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="HandheldFriendly" content="true">
 	<title>Crowdsource Vit Bhopal</title>
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<script src="https://kit.fontawesome.com/785cae4a1f.js" crossorigin="anonymous"></script>
