--- a/Crowdsource/event.html
+++ b/Crowdsource/event.html
@@ -18,7 +18,7 @@
 	<header>
 		<nav class="navbar">
 		  <div class="logo">
-			
+		<img class="huii" src="images/logo.svg" alt="" width="210" />
 		  </div>
 		  <div class="sitenavigation">
 			<span class="menu-icon">
@@ -30,7 +30,7 @@
 			</div>
 			</span>
 			<ul>
-<li class="hui"><img class="huii" src="images/logo.svg" alt="" width="210" /></li>
+
 			<li><a href="index.html">HOME</a></li>
 			<li><a href="#event-page">EVENTS</a></li>
 			<li><a href="#about-speaker">ABOUT SPEAKER</a></li>
