--- a/Crowdsource/index.html
+++ b/Crowdsource/index.html
@@ -54,7 +54,8 @@
 					<div class="typewriter">
 						<p><strong>Create, Connect and Contribute.</strong></p>
 					</div></br>
-					<a href="#work" class="button large scrolly">Get Started</a>
+					
+					<button href="#work" class="large button scrolly">Get Started</button>
 				</div>
 			</div>
 		</div>
@@ -301,6 +302,7 @@
 								class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.linkedin.com/company/82153834/"
 								class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.instagram.com/crowdsource_vitbhopal/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 
 						<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
