--- a/Crowdsource/event.html
+++ b/Crowdsource/event.html
@@ -72,7 +72,7 @@
 						<h1 class="event-head">"𝓖𝓮𝓽 𝓢𝓮𝓽 𝓒𝓻𝓸𝔀𝓭𝓼𝓸𝓾𝓻𝓬𝓮"</h1>
 
 						<div class="container">
-							<div><img class="event-img" src="/images/clc poster.svg" alt="event-poster">
+							<div><img class="event-img" src="images/clc poster.svg" alt="event-poster">
 								<hr>
 							</div>
 							<div class="event-content">
@@ -140,7 +140,7 @@
 		<div >
 			<article id="more-event" class=" style1">
 				<h1>More exicting events</h1>
-				<img class="gifevent" src="/images/loading2.gif" alt="loading"> 
+				<img class="gifevent" src="images/loading2.gif" alt="loading"> 
 				<h4 class=""> <li>ᑕOᗰIᑎG ᔕOOᑎ </li>  </h4>
 				<hr>
 				
