--- a/Crowdsource/event.html
+++ b/Crowdsource/event.html
@@ -54,7 +54,7 @@
 			</header>
 			<hr>
 
-			<div id="timer" class="timer1">
+			<div id="timer" class="timer1 timebg">
 				<article id="event-page " class="style2">
 					<h3 class="bg-text">  • 𝓵𝓮𝓽 𝓽𝓱𝓮 𝓬𝓸𝓾𝓷𝓽𝓭𝓸𝔀𝓷 𝓫𝓮𝓰𝓲𝓷𝓼 </h3>
 
