--- a/Crowdsource/index.html
+++ b/Crowdsource/index.html
@@ -16,7 +16,8 @@
 	<header>
 		<nav class="navbar">
 		  <div class="logo">
-			<img class="huii" src="images/logo.svg" alt="" width="210" />
+			<a href="#top">
+				<img class="huii" src="images/logo.svg" alt="" width="210" /></a>
 		  </div>
 		  <div class="sitenavigation">
 			<span class="menu-icon">
@@ -55,7 +56,7 @@
 						<p><strong>Create, Connect and Contribute.</strong></p>
 					</div></br>
 					
-					<button href="#work" class="large button scrolly">Get Started</button>
+					<a href="#work" class="large button scrolly">Get Started</a>
 				</div>
 			</div>
 		</div>
@@ -136,7 +137,9 @@
 			<p class="members">
 				<blue>M</blue><red>E</red><yellow>N</yellow><blue>T</blue><green>O</green><red>R</red><yellow></yellow>
 			</p>
-			<div class="mentor">
+			
+		<div class="two">
+			<div class="mentor col-4 col-6-medium col-12-small">
 				<article class="  box style2 ">
 					<a href="#team" class="image featured"><img src="images/shishir.svg" alt="" /></a>
 					<h3 class="name"> <a href="#team">Dr. Shishir Kumar Shandilya</a>
@@ -146,9 +149,14 @@
 						<a href="https://www.linkedin.com/in/sks1809/"><img class="links"><i class="fa-brands fa-linkedin"></i></a>
 					</p> --->
 					<h4 class="linktree"><a href="https://www.linkedin.com/in/sks1809/">LinkedIn<i
-						class="fa-solid fa-link"></i></a></h4>
-				</article>
+					class="fa-solid fa-link"></i></a></h4>
+				
 			</div>
+			
+			
+			
+		</div>
+			
 			<hr>
 			<p class="members">
 				<blue>M</blue><red>E</red><yellow>M</yellow><blue>B</blue><green>E</green><red>R</red><yellow>S</yellow>
@@ -232,7 +240,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a target="_blank" href="https://www.instagram.com/_x.aadill/" class="image featured"><img
-								src="images/adil.png" alt="" /></a>
+								src="images/adil.jpg" alt="" /></a>
 						<h3 class="name"><a target="_blank " href="https://www.linkedin.com/in/adil-ahmad-70a27a21b/">Adil Ahmad</a>
 						</h3>
 						<p class="des">Crowdsource VIT Bhopal</p>
