--- a/Crowdsource/event.html
+++ b/Crowdsource/event.html
@@ -18,8 +18,8 @@
 	<header>
 		<nav class="navbar">
 		  <div class="logo">
-			<a href="/index.html"></a>
-			<img class="huii" src="images/logo.svg" alt="" width="210" />
+			<a href="index.html">
+			<img class="huii" src="images/logo.svg" alt="" width="210" /></a>
 		  </div>
 		  <div class="sitenavigation">
 			<span class="menu-icon">
