--- a/Crowdsource/index.html
+++ b/Crowdsource/index.html
@@ -240,7 +240,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a target="_blank" href="https://www.instagram.com/_x.aadill/" class="image featured"><img
-								src="images/adil.jpg" alt="" /></a>
+								src="images/adil_new.svg" alt="" /></a>
 						<h3 class="name"><a target="_blank " href="https://www.linkedin.com/in/adil-ahmad-70a27a21b/">Adil Ahmad</a>
 						</h3>
 						<p class="des">Crowdsource VIT Bhopal</p>
