--- a/Crowdsource/event.html
+++ b/Crowdsource/event.html
@@ -50,7 +50,7 @@
 				<p class="members head1">
 					<blue>E</blue><red>V</red><yellow>E</yellow><blue>N</blue><green>T</green><red>S</red><yellow></yellow>
 				</p>
-				<p class="name">  •  𝓖𝓮𝓪𝓻 𝓾𝓹 𝓯𝓸𝓻 𝓪𝓷 𝓮𝔁𝓬𝓲𝓽𝓲𝓷𝓰 𝓮𝓿𝓮𝓷𝓽 !!</p>
+				 <!--<p class="name">  •  𝓖𝓮𝓪𝓻 𝓾𝓹 𝓯𝓸𝓻 𝓪𝓷 𝓮𝔁𝓬𝓲𝓽𝓲𝓷𝓰 𝓮𝓿𝓮𝓷𝓽 !!</p> -->
 
 			</header>
 			<hr>
@@ -73,7 +73,7 @@
 						<h1 class="event-head">"𝓖𝓮𝓽 𝓢𝓮𝓽 𝓒𝓻𝓸𝔀𝓭𝓼𝓸𝓾𝓻𝓬𝓮"</h1>
 
 						<div class="container">
-							<div><img class="event-img" src="images/poster_clc.jpg"alt="event-poster">
+							<div><img class="event-img" src="images/loading2.gif"alt="event-poster">
 								
 								<hr>
 							</div>
@@ -102,7 +102,7 @@
 						<div class="speaker-img">
 							<div class="mentor">
 								<article     class=" box style2 ">
-									<a href="#" class="image featured"><img class="image-nik"  src="images/nikhil.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img class="image-nik"  src="https://drive.google.com/drive/u/6/folders/1zbOwXNWfjaiwBlr-1E0p7bWGKlcOo_nh" alt="" /></a>
 									<h3 class="name"> <a href="">Mr. Nikhil Raichur</a>
 									</h3>
 									<p class="des">Program manager at GOOGLE .</p>
