--- a/Crowdsource/index.html
+++ b/Crowdsource/index.html
@@ -30,10 +30,10 @@
 			</span>
 			<ul>
 				<li><a href="#top">HOME</a></li>
-				<li><a href="#work">ABOUT US</a></li>
 				<li><a href="#portfolio">TEAM</a></li>
-				<li><a href="event.html">EVENTS</a></li>
+				<li><a href="event.html"><gliters>EVENTS</gliters></a></li>
 				<li><a href="#contact">CONTACT US</a></li>
+				<li ><a href="registration.html" class="color-reg" > <gliter>REGISTER NOW !</gliter> </a></li>
 			</ul>
 		  </div>
 		</nav>
@@ -56,7 +56,9 @@
 						<p><strong>Create, Connect and Contribute.</strong></p>
 					</div></br>
 					
-					<a href="#work" class="large button scrolly">Get Started</a>
+					<a target="" href="#work">
+						<p class=" button">Get Started</p>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -260,7 +262,8 @@
 		<div>
 			<article class="">
 				<h1>List of upcoming Events </h1>
-				<a href="event.html" class="button large scrolly "> Upcoming Events </a><img class="btngif" src="images/newbtn.gif" alt="new">
+				<h2><a href="registration.html" class="color-reg" > <gliter>REGISTER NOW !</gliter>  </a> </h2>
+				<a href="event.html" class="button large scrolly "> Upcoming Events </a><img class="btngif" src="images/click.gif" alt="new">
 			</article>
 
 		</div>
