November nights updates

--- a/Crowdsource/event.html
+++ b/Crowdsource/event.html
@@ -175,8 +175,8 @@
 							
 						</div >
 							<div class="images-e">
-							<img class="img-nov" src="/images/1.jpg" alt="image">
-							<img  class="img-nov" src="/images/vocal.jpg" alt="image">
+							<img class="img-nov" src="images/1.jpg" alt="image">
+							<img  class="img-nov" src="images/vocal.jpg" alt="image">
 						</div>
 						</div>
 						<a  href="registration.html">
