--- a/Crowdsource/registration.html
+++ b/Crowdsource/registration.html
@@ -36,13 +36,13 @@
         </nav>
     </header>
     <div class="reg">
-        <h1 class="event-head regf "> 𝓡𝓮𝓰𝓲𝓼𝓽𝓻𝓪𝓽𝓲𝓸𝓷 𝓕𝓸𝓻𝓶  𝓯𝓸𝓻 
-            <br/> <br/> 𝓔𝓿𝓮𝓷𝓽𝓼 𝓪𝓷𝓭 𝓒𝓸𝓶𝓶𝓾𝓷𝓲𝓽𝔂 <h1>
+        <h1 class="event-head regf "> Career Development Session on ML 
+            <br/> <br/> With Google Crowdsource  <h1>
            
     </div>
     <div class="embbed">
         <iframe id="gform" class="formstyle"
-            src="https://docs.google.com/forms/d/e/1FAIpQLSc9iSr4aYSglrhnylFBVS6uStfOWysRIkPbWryx1O-4NhlFvQ/viewform?embedded=true"
+            src="https://docs.google.com/forms/d/e/1FAIpQLSfGim_VKhYnIJH5xT8ph-34XABmnOR1vZMwOsPJGOlbl10GDQ/viewform?embedded=true"
             frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 
