--- a/Crowdsource/registration.html
+++ b/Crowdsource/registration.html
@@ -35,7 +35,10 @@
             </div>
         </nav>
     </header>
-    <div class="reg">
+    <div class="ucimagediv">
+        <img  class="ucimage"  src="images/under-construction.gif" alt="">
+    </div>
+  <!--- <div class="reg">
         <h1 class="event-head regf "> Career Development Session on ML 
             <br/> <br/> With Google Crowdsource  <h1>
            
@@ -46,7 +49,7 @@
             frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 
-    </div>
+    </div> -->
     <footer class="save">
         <ul class="name save" id="copyright">
             <li>&copy; Made with ❤️ Crowdsource Influencers Team</li>
